// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MOption Option should render correctly 1`] = `
<m-popup placement="bottom" close-on-backdrop="true" class="m-option">
  <m-icon-button slot="trigger" id="mOption-uuid" aria-haspopup="true" aria-controls="mOption-uuid-controls" skin="light" title="Open menu" icon-name="m-svg__options" button-size="44px" class="m-option__button"></m-icon-button>
  <ul id="mOption-uuid-controls" aria-labelledby="mOption-uuid" class="m-option__list">
    <m-option>
      <m-option-item value="a">A item</m-option-item>
      <m-option-item value="b">B item</m-option-item>
      <m-option-item value="c">C item</m-option-item>
    </m-option>
  </ul>
</m-popup>
`;

exports[`MOption Option should render correctly placement left 1`] = `
<m-popup placement="left" close-on-backdrop="true" class="m-option">
  <m-icon-button slot="trigger" id="mOption-uuid" aria-haspopup="true" aria-controls="mOption-uuid-controls" skin="light" title="Open menu" icon-name="m-svg__options" button-size="44px" class="m-option__button"></m-icon-button>
  <ul id="mOption-uuid-controls" aria-labelledby="mOption-uuid" class="m-option__list">
    <m-option>
      <m-option-item value="a">A item</m-option-item>
      <m-option-item value="b">B item</m-option-item>
      <m-option-item value="c">C item</m-option-item>
    </m-option>
  </ul>
</m-popup>
`;

exports[`MOption Option should render correctly placement right 1`] = `
<m-popup placement="right" close-on-backdrop="true" class="m-option">
  <m-icon-button slot="trigger" id="mOption-uuid" aria-haspopup="true" aria-controls="mOption-uuid-controls" skin="light" title="Open menu" icon-name="m-svg__options" button-size="44px" class="m-option__button"></m-icon-button>
  <ul id="mOption-uuid-controls" aria-labelledby="mOption-uuid" class="m-option__list">
    <m-option>
      <m-option-item value="a">A item</m-option-item>
      <m-option-item value="b">B item</m-option-item>
      <m-option-item value="c">C item</m-option-item>
    </m-option>
  </ul>
</m-popup>
`;

exports[`MOption Option should render correctly placement top 1`] = `
<m-popup placement="top" close-on-backdrop="true" class="m-option">
  <m-icon-button slot="trigger" id="mOption-uuid" aria-haspopup="true" aria-controls="mOption-uuid-controls" skin="light" title="Open menu" icon-name="m-svg__options" button-size="44px" class="m-option__button"></m-icon-button>
  <ul id="mOption-uuid-controls" aria-labelledby="mOption-uuid" class="m-option__list">
    <m-option>
      <m-option-item value="a">A item</m-option-item>
      <m-option-item value="b">B item</m-option-item>
      <m-option-item value="c">C item</m-option-item>
    </m-option>
  </ul>
</m-popup>
`;

exports[`MOption should react to open prop changes 1`] = `
<m-popup placement="bottom" close-on-backdrop="true" class="m-option">
  <m-icon-button slot="trigger" id="mOption-uuid" aria-haspopup="true" aria-controls="mOption-uuid-controls" skin="light" title="Open menu" icon-name="m-svg__options" button-size="44px" class="m-option__button"></m-icon-button>
  <ul id="mOption-uuid-controls" aria-labelledby="mOption-uuid" class="m-option__list">
    <m-option>
      <m-option-item value="a">A item</m-option-item>
      <m-option-item value="b">B item</m-option-item>
      <m-option-item value="c">C item</m-option-item>
    </m-option>
  </ul>
</m-popup>
`;

exports[`MOption should react to open prop changes 2`] = `
<m-popup open="open" placement="bottom" close-on-backdrop="true" class="m-option">
  <m-icon-button slot="trigger" id="mOption-uuid" aria-haspopup="true" aria-controls="mOption-uuid-controls" skin="light" title="Open menu" icon-name="m-svg__options" button-size="44px" class="m-option__button"></m-icon-button>
  <ul id="mOption-uuid-controls" aria-labelledby="mOption-uuid" class="m-option__list">
    <m-option>
      <m-option-item value="a">A item</m-option-item>
      <m-option-item value="b">B item</m-option-item>
      <m-option-item value="c">C item</m-option-item>
    </m-option>
  </ul>
</m-popup>
`;

exports[`MOption should render correctly when close title is set 1`] = `
<m-popup open="open" placement="bottom" close-on-backdrop="true" class="m-option">
  <m-icon-button slot="trigger" id="mOption-uuid" aria-haspopup="true" aria-controls="mOption-uuid-controls" skin="light" title="Open menu" icon-name="m-svg__options" button-size="44px" class="m-option__button"></m-icon-button>
  <ul id="mOption-uuid-controls" aria-labelledby="mOption-uuid" class="m-option__list">
    <m-option>
      <m-option-item value="a">A item</m-option-item>
      <m-option-item value="b">B item</m-option-item>
      <m-option-item value="c">C item</m-option-item>
    </m-option>
  </ul>
</m-popup>
`;

exports[`MOption should render correctly when open title is set 1`] = `
<m-popup placement="bottom" close-on-backdrop="true" class="m-option">
  <m-icon-button slot="trigger" id="mOption-uuid" aria-haspopup="true" aria-controls="mOption-uuid-controls" skin="light" title="Title open" icon-name="m-svg__options" button-size="44px" class="m-option__button"></m-icon-button>
  <ul id="mOption-uuid-controls" aria-labelledby="mOption-uuid" class="m-option__list">
    <m-option>
      <m-option-item value="a">A item</m-option-item>
      <m-option-item value="b">B item</m-option-item>
      <m-option-item value="c">C item</m-option-item>
    </m-option>
  </ul>
</m-popup>
`;

exports[`MOption should render correctly when size is set 1`] = `
<m-popup placement="bottom" close-on-backdrop="true" class="m-option">
  <m-icon-button slot="trigger" id="mOption-uuid" aria-haspopup="true" aria-controls="mOption-uuid-controls" skin="light" title="Open menu" icon-name="m-svg__options" button-size="200px" class="m-option__button"></m-icon-button>
  <ul id="mOption-uuid-controls" aria-labelledby="mOption-uuid" class="m-option__list">
    <m-option>
      <m-option-item value="a">A item</m-option-item>
      <m-option-item value="b">B item</m-option-item>
      <m-option-item value="c">C item</m-option-item>
    </m-option>
  </ul>
</m-popup>
`;

exports[`MOption should render correctly when skin is dark 1`] = `
<m-popup placement="bottom" close-on-backdrop="true" class="m-option">
  <m-icon-button slot="trigger" id="mOption-uuid" aria-haspopup="true" aria-controls="mOption-uuid-controls" skin="dark" title="Open menu" icon-name="m-svg__options" button-size="44px" class="m-option__button"></m-icon-button>
  <ul id="mOption-uuid-controls" aria-labelledby="mOption-uuid" class="m-option__list">
    <m-option>
      <m-option-item value="a">A item</m-option-item>
      <m-option-item value="b">B item</m-option-item>
      <m-option-item value="c">C item</m-option-item>
    </m-option>
  </ul>
</m-popup>
`;

exports[`MOption should render correctly when skin is light 1`] = `
<m-popup placement="bottom" close-on-backdrop="true" class="m-option">
  <m-icon-button slot="trigger" id="mOption-uuid" aria-haspopup="true" aria-controls="mOption-uuid-controls" skin="light" title="Open menu" icon-name="m-svg__options" button-size="44px" class="m-option__button"></m-icon-button>
  <ul id="mOption-uuid-controls" aria-labelledby="mOption-uuid" class="m-option__list">
    <m-option>
      <m-option-item value="a">A item</m-option-item>
      <m-option-item value="b">B item</m-option-item>
      <m-option-item value="c">C item</m-option-item>
    </m-option>
  </ul>
</m-popup>
`;
